<resources>
    <string name="app_name">MemesNetwork</string>
    <string name="fa_volume_up">&#xf028;</string>
    <string name="fa_volume_mute">&#xf6a9;</string>
    <string name="fa_thumbs_up">&#xf164;</string>
    <string name="fa_thumbs_down">&#xf165;</string>
    <string name="fa_alt_share_square">&#xf1e1;</string>
    <string name="fa_alt_share">&#xf1e0;</string>
    <string name="fa_comment">&#xf075;</string>
    <string name="fa_arrow_left">&#xf060;</string>
    <string name="fa_user_circle">&#xf2bd;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_th_list">&#xf00b;</string>
    <string name="fa_laugh_squint">&#xf59b;</string>
    <string name="fa_hand_point_left">&#xf0a5;</string>
    <string name="fa_angle_left">&#xf104;</string>
    <string name="admob_app_id">ca-app-pub-4908922088432819~3422409226</string>
    <!-- test -->
    <!--<string name="admob_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->

    <!-- published -->
    <string name="admob_banner_ad_unit_id">ca-app-pub-4908922088432819/1366133667</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_sound">No Sound</string>
    <string name="section">Section</string>
    <string name="description">Description</string>
    <string name="add_content">Add Content</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="logout_msg">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="followings">Following</string>
    <string name="followers">Followers</string>
    <string name="uploading">Uploading..</string>
    <string name="edit">Edit</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="help_the_developer_remove_ads">Help the Developer (Remove Ads)</string>
    <string name="my_memes">My Memes</string>
    <string name="liked">Liked</string>
    <string name="unknown">unknown</string>
    <string name="memes">Memes</string>
    <string name="reply">Reply</string>
    <string name="reply_to">Reply to %s</string>
    <string name="upload">Upload</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="storage_access">Storage Access</string>
    <string name="storage_access_desc">You need to allow access to manage all files</string>
    <string name="compressing">Compressing…</string>
    <string name="add">Add</string>
    <string name="top_section">Top Section:</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="notifications">Notifications</string>
    <string name="channel_id_comment_notif">CommentNotification</string>
    <string name="channel_id_memes_liked_notif">MemesLikedNotification</string>
    <string name="channel_id_following_notif">FollowingNotification</string>
    <string name="home">Home</string>
    <string name="following">Following</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="enable_following_notification">Enable Following Notification</string>
    <string name="enable_comment_reply_notification">Enable Comment Reply Notification</string>
    <string name="enable_memes_comment_notification">Enable Memes Comment Notification</string>
    <string name="privacy_policy_url">https://memesnetwork.com/privacypolicy</string>
    <string name="type_your_new_username">Type your new username</string>
    <string name="type_an_username">Type an username</string>
    <string name="enable_liked_memes_notification">Enable Liked Memes Notification</string>
    <string name="select_source">Select Source:</string>
    <string name="ok">OK</string>
    <string name="search_user">Search User</string>
    <string name="please_wait">Please wait...</string>
    <string name="top_sections">Top Sections:</string>
    <string name="delete">Delete</string>
</resources>
