<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="">

        <LinearLayout
            android:id="@+id/linBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_circle_left" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvBtnEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:text="@string/edit"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfile"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/funny_user2"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ImageView
        android:id="@+id/iv_profilepic_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit"
        ads:layout_constraintBottom_toBottomOf="@id/ivProfile"
        ads:layout_constraintRight_toRightOf="@id/ivProfile" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/ivProfile"
        app:layout_constraintStart_toStartOf="@+id/ivProfile"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile" />

    <TextView
        android:id="@+id/lbl_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/followings"
        android:textColor="@color/white"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toLeftOf="@id/lbl_followers"
        ads:layout_constraintTop_toBottomOf="@id/tvUsername" />

    <TextView
        android:id="@+id/lbl_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/followers"
        android:textColor="@color/white"
        ads:layout_constraintLeft_toRightOf="@id/lbl_following"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/tvUsername" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/white"
        android:textStyle="bold"
        ads:layout_constraintLeft_toLeftOf="@id/lbl_following"
        ads:layout_constraintRight_toRightOf="@id/lbl_following"
        ads:layout_constraintTop_toBottomOf="@id/lbl_following" />

    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/white"
        android:textStyle="bold"
        ads:layout_constraintLeft_toLeftOf="@id/lbl_followers"
        ads:layout_constraintRight_toRightOf="@id/lbl_followers"
        ads:layout_constraintTop_toBottomOf="@id/lbl_followers" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/dimen_8"
        android:background="@color/white"
        ads:layout_constraintTop_toBottomOf="@id/tv_following" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:layout_constraintTop_toBottomOf="@id/separator1"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/grey700" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/tab_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        ads:layout_constraintTop_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:orientation="horizontal"
            ads:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="4dp"
                android:layout_weight="0.5"
                android:background="@color/backgroundMain">

                <TextView
                    android:id="@+id/tvBtnLike"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/likes"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linComment"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="4dp"
            android:background="@color/backgroundMain"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/tvBtnComment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/comments"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="4dp"
            android:background="@color/backgroundMain"
            app:layout_constraintTop_toBottomOf="@+id/linComment">

            <TextView
                android:id="@+id/tvBtnPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linSubscription"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="4dp"
            android:background="@color/backgroundMain"
            app:layout_constraintTop_toBottomOf="@+id/linPrivacyPolicy">

            <TextView
                android:id="@+id/tvBtnSubscription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/help_the_developer_remove_ads"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="4dp"
            android:background="@color/backgroundMain"
            app:layout_constraintTop_toBottomOf="@+id/linSubscription">

            <TextView
                android:id="@+id/tvBtnLogout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/loading_upload"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black87Opacity"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        ads:layout_constraintTop_toTopOf="parent">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.PulseRing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/uploading"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_ad_unit_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>