<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="">

        <LinearLayout
            android:id="@+id/linBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|start"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_circle_left" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvBtnEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/linSubscription"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="4dp"
            android:background="@color/backgroundMain"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/linPrivacyPolicy">

            <TextView
                android:id="@+id/tvBtnSubscription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Help the Developer (Remove Ads)"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_row_settings"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enable_following_notification"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swNotifFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/dimen_16"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_row_settings"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enable_memes_comment_notification"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swNotifMemesComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_row_settings"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enable_comment_reply_notification"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swNotifCommentReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/dimen_16"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tvBtnPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_row_settings"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_16"
            android:text="@string/privacy_policy"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/dimen_16"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tvBtnLogout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_row_settings"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_16"
            android:text="@string/logout"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/dimen_16"
            android:background="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>